RESOLVED FIXED279579
MediaPlayerPrivate are not consistent in how much they reuse the MediaPlayer resource loader
https://bugs.webkit.org/show_bug.cgi?id=279579
Summary MediaPlayerPrivate are not consistent in how much they reuse the MediaPlayer ...
youenn fablet
Reported 2024-09-11 23:22:54 PDT
MediaPlayerPrivate are not consistent in how much they reuse the MediaPlayer resource loader
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-11 23:23:25 PDT
EWS
Comment 2 2024-09-13 04:19:08 PDT
Committed 283611@main (0a1d85c0a0c4): <https://commits.webkit.org/283611@main> Reviewed commits have been landed. Closing PR #33542 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.