Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm
@@ -268,7 +268,7 @@ bool MediaPlayerPrivateWebM::createResourceClient()
         request.addHTTPHeaderField(HTTPHeaderName::Range, makeString("bytes="_s, m_contentReceived, '-', m_contentLength));
     }
 
-    m_resourceClient = WebMResourceClient::create(*this, player->createResourceLoader(), WTFMove(request));
+    m_resourceClient = WebMResourceClient::create(*this, player->mediaResourceLoader(), WTFMove(request));
 
     return !!m_resourceClient;
 }
